rubocop/examples/good/style_NegatedWhile.rb
# Favor until over while for negative conditions.

# good
do_something until some_condition
