rubocop/examples/bad/style_NegatedWhile.rb
# Favor until over while for negative conditions.

# bad
do_something while !some_condition
